--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
+    "typeorm": "^0.2.41",
     "typescript": "^4.5.4"
   },
   "scripts": {
-    "start": "ts-node src/server.ts --ignore node_modules"
+    "start": "ts-node-dev  --transpile-only --ignore-watch node_modules -r tsconfig-paths/register src/server.ts"
   }
 }
