--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "refreshToken",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.2",
-    "express": "^4.17.2",
-    "jsonwebtoken": "^8.5.1",
-    "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
-    "tsconfig-paths": "^3.12.0",
-    "typeorm": "^0.2.41",
-    "typescript": "^4.5.4"
-  },
-  "scripts": {
-    "start": "ts-node-dev  --transpile-only --ignore-watch node_modules -r tsconfig-paths/register src/server.ts"
-  }
+   "name": "refreshToken",
+   "version": "1.0.0",
+   "main": "index.js",
+   "license": "MIT",
+   "dependencies": {
+      "@types/express": "^4.17.13",
+      "@types/node": "^17.0.2",
+      "express": "^4.17.2",
+      "jsonwebtoken": "^8.5.1",
+      "sqlite3": "^5.0.2",
+      "ts-node": "^10.4.0",
+      "ts-node-dev": "^1.1.8",
+      "tsconfig-paths": "^3.12.0",
+      "typeorm": "0.2.37",
+      "typescript": "^4.5.4",
+      "reflect-metadata": "^0.1.10",
+      "mysql": "^2.14.1"
+   },
+   "scripts": {
+      "start": "ts-node src/index.ts"
+   },
+   "devDependencies": {
+      "ts-node": "3.3.0",
+      "@types/node": "^8.0.29",
+      "typescript": "3.3.3333"
+   }
 }
