--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
-   "type": "mysql",
+   "type": "sqlite",
    "database": "database.sqlite",
    "synchronize": true,
    "logging": false,
    "entities": [
-      "src/database/entity/**/*.ts"
+      "src/database/models/**/*.ts"
    ],
    "migrations": [
       "src/database/migration/**/*.ts"
