--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
       "mysql": "^2.14.1"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node-dev --transpile-only --ignore-watch node_modules -r tsconfig-paths/register src/server.ts",
+      "typeorm":"ts-node-dev node_modules/typeorm/cli.js"
    },
    "devDependencies": {
       "ts-node": "3.3.0",
