--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,22 @@
 {
    "compilerOptions": {
-      "lib": [
-         "es5",
-         "es6"
-      ],
-      "target": "es5",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "outDir": "./build",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "sourceMap": true
-   }
-}
+     "target": "es5",
+     "module": "commonjs",
+     "lib": ["es6"],
+     "allowJs": true,
+     "outDir": "./dist",
+     "rootDir": "./src",
+     "removeComments": true,
+     "typeRoots": ["./node_modules/@types", "./src/@types"],
+     "esModuleInterop": true,
+     "resolveJsonModule": true,
+     "experimentalDecorators": true,
+     "emitDecoratorMetadata": true,
+     "skipLibCheck": true,
+     "forceConsistentCasingInFileNames": true,
+     "baseUrl": ".",
+         "paths": {
+             "~/*": ["src/*"]
+         }
+   },
+ }
