--- a/package.json
+++ b/package.json
@@ -6,24 +6,26 @@
    "dependencies": {
       "@types/express": "^4.17.13",
       "@types/node": "^17.0.2",
+      "bcrypt": "^5.0.1",
       "express": "^4.17.2",
       "jsonwebtoken": "^8.5.1",
+      "mysql": "^2.14.1",
+      "reflect-metadata": "^0.1.10",
       "sqlite3": "^5.0.2",
       "ts-node": "^10.4.0",
       "ts-node-dev": "^1.1.8",
       "tsconfig-paths": "^3.12.0",
       "typeorm": "0.2.37",
-      "typescript": "^4.5.4",
-      "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "typescript": "^4.5.4"
    },
    "scripts": {
       "start": "ts-node-dev --transpile-only --ignore-watch node_modules -r tsconfig-paths/register src/server.ts",
-      "typeorm":"ts-node-dev node_modules/typeorm/cli.js"
+      "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
    },
    "devDependencies": {
-      "ts-node": "3.3.0",
+      "@types/bcrypt": "^5.0.0",
       "@types/node": "^8.0.29",
+      "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    }
 }
