--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "@types/express": "^4.17.13",
       "@types/node": "^17.0.2",
       "bcrypt": "^5.0.1",
+      "dayjs": "^1.10.7",
       "express": "^4.17.2",
       "jsonwebtoken": "^8.5.1",
       "mysql": "^2.14.1",
@@ -24,6 +25,7 @@
    },
    "devDependencies": {
       "@types/bcrypt": "^5.0.0",
+      "@types/jsonwebtoken": "^8.5.6",
       "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
       "typescript": "3.3.3333"
