--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
       "typescript": "^4.5.4"
    },
    "scripts": {
-      "start": "ts-node-dev --transpile-only --ignore-watch node_modules -r tsconfig-paths/register src/server.ts",
+      "start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules -r tsconfig-paths/register src/server.ts",
       "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
    },
    "devDependencies": {
